data/derived/comb/progs/unify/prog5879.ml.out
Characters 139-156:
  | Sine e1              -> "sin (pi * "^^(exprToString e1)^^")"
                                          ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         ('a, 'b, 'c, 'd, 'e, 'f) format6 =
           ('a, 'b, 'c, 'd, 'e, 'f) CamlinternalFormatBasics.format6
